added links for projects live sites

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                             <img src="./assets/project_img/project1.png" alt="">
                         </a>
                         <div class="buttons">
-                            <a href="#">
+                            <a href="https://optimistic-hamilton-3dce61.netlify.app">
                                 <button>Live Site</button>
                             </a>
-                            <a href="#">
+                            <a href="https://github.com/Nightclaw6/Adrian-Stoian-Project-One">
                                 <button>Git Hub</button>
                             </a>
                         </div>
@@ -142,10 +142,10 @@
                             <img src="./assets/project_img/project2.png" alt="">
                         </a>
                         <div class="buttons">
-                            <a href="#">
+                            <a href="https://condescending-curran-043a74.netlify.app">
                                 <button>Live Site</button>
                             </a>
-                            <a href="#">
+                            <a href="https://github.com/Nightclaw6/Compound-interest-calculator">
                                 <button>Git Hub</button>
                             </a>
                         </div>
@@ -155,10 +155,10 @@
                             <img src="./assets/project_img/project3.png" alt="">
                         </a>
                         <div class="buttons">
-                            <a href="#">
+                            <a href="https://boring-roentgen-a41a83.netlify.app/#">
                                 <button>Live Site</button>
                             </a>
-                            <a href="#">
+                            <a href="https://github.com/Nightclaw6/The-Movie-Info-Booth">
                                 <button>Git Hub</button>
                             </a>
                         </div>
