--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </ul>
             </div>
             <div class="contact_info">
-                <form action="POST" data-netlify=""true">
+                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
                     <p class="item">
                         
                         <label for="">Name</label>
@@ -226,9 +226,8 @@
                     <p class="full">
                         <button>Submit</button>
                     </p>
-                    <div class="field">
-                        <div data-netlify-recaptcha="true"></div>
-                    </div>
+                    <div data-netlify-recaptcha="true"></div>
+                    
                 </form>
             </div>
         </section>
