--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </ul>
             </div>
             <div class="contact_info">
-                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+                <form name="contact" method="POST" netlify data-netlify="true" data-netlify-recaptcha="true">
                     <p class="item">
                         
                         <label for="">Name</label>
