made few changes

--- a/index.html
+++ b/index.html
@@ -286,9 +286,7 @@
                     <p class="full">
                         
                         <label>Message</label>
-                        <textarea placeholder="Want to Grab a Coffee?
-Want to Chat About Life?
-Want to Offer Me a Job?"name="message" id="message" cols="30" rows="10"></textarea>
+                        <textarea placeholder=""name="message" id="message" cols="30" rows="10"></textarea>
                     </p>
                     <p class="full">
                         <button>Submit</button>
@@ -312,3 +310,8 @@ Want to Offer Me a Job?"name="message" id="message" cols="30" rows="10"></textar
     <script src="hamburger.js"></script>
 </body>
 </html>
+
+
+
+
+
