fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -94,13 +94,16 @@
                 
                 <div class="rightContainer">
                     <h3>Who am I</h3>
-                    <p>Hi! My name is Adrian and I am a professional and dedicated Front End Developer based in Toronto,
+                    <p class="tab">Hi! I'm Adrian and I am a professional Front End Developer based in Toronto,
                     passionate about learning new technologies, bringing new ideas to
                     life and working with dedicated teams to build efficient and robust
                     applications.
                     Using excellent skills in HTML, CSS, SASS, JavaScript, React, I am able to build
                     clean and responsive applications tailored to every client's needs and
-                    expectations.</p>
+                    expectations.
+                    </p>
+                    <p class="tab">When I am not coding you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.   
+                    </p>
                     <h3>My Developer Tools:</h3>
                     <div class="skillList">
                         <ul class="skillIcons">
