added google analytics tag

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <script src="https://kit.fontawesome.com/1a5cd12572.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YXDZGX9BNJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YXDZGX9BNJ');
+    </script>
     <link rel="stylesheet" href="./styles/sass/styles.css">
 </head>
 <body>
