fixed grammar issues

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <main>
             <img class="heroImg" src="./assets/bg.jpg" alt="">
             <div class="txtContainer">
-                <h1>Hello, my name is Adrian.</h1>
+                <h1>Hello, I'm Adrian.</h1>
                 <p class="subtitle">Welcome to my website!</p>
             </div>
         </main>
@@ -103,7 +103,7 @@
                 
                 <div class="rightContainer">
                     <h3>Who am I</h3>
-                    <p class="tab">Hi! I'm Adrian and I am a professional Front End Developer based in Toronto,
+                    <p class="tab">Hi! I am a professional Front End Developer based in Toronto,
                     passionate about learning new technologies, bringing new ideas to
                     life and working with dedicated teams to build efficient and robust
                     applications.
@@ -111,7 +111,7 @@
                     clean and responsive applications tailored to every client's needs and
                     expectations.
                     </p>
-                    <p class="tab">When I am not coding you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.   
+                    <p class="tab">When I am not coding, you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.   
                     </p>
                     <h3>My Developer Tools:</h3>
                     <div class="skillList">
