--- a/index.html
+++ b/index.html
@@ -103,15 +103,9 @@
                 
                 <div class="rightContainer">
                     <h3>Who am I</h3>
-                    <p class="tab">Hi! I am a professional Front End Developer based in Toronto,
-                    passionate about learning new technologies, bringing new ideas to
-                    life and working with dedicated teams to build efficient and robust
-                    applications.
-                    Using excellent skills in HTML, CSS, SASS, JavaScript, React, I am able to build
-                    clean and responsive applications tailored to every client's needs and
-                    expectations.
+                    <p class="tab">Hi! I am a professional Front End Developer based in Toronto. I am passionate about learning new technologies, bringing new ideas to life, and working with dedicated teams to build efficient and robust applications. I can build clean and responsive applications tailored to every client's needs and expectations using excellent skills in HTML, CSS, SASS, JavaScript, and React.
                     </p>
-                    <p class="tab">When I am not coding, you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.   
+                    <p class="tab">When I am not coding, you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.
                     </p>
                     <h3>My Developer Tools:</h3>
                     <div class="skillList">
