--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-    <script src="https://kit.fontawesome.com/1a5cd12572.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/94bf10d70d.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YXDZGX9BNJ"></script>
     <script>
@@ -130,10 +130,18 @@
                                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain-wordmark.svg" />
                             </li>
                             <li class="icons" id="github">
-                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" />
+                                <img src="./assets/skills/273178_github_icon.png" />
                             </li>
                             <li class="icons">
                                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original-wordmark.svg" />
+                            </li>
+                            <li class="icon-style">
+                                <img src="./assets/skills/icons8-responsive-design-96.png"/>
+                                <p class="p-style">Responsive Design</p>
+                            </li>
+                            <li class="icon-style">
+                                <img class="img-style" src="./assets/skills/icons8-web-accessibility-96.png" />
+                                <p class="p-style">WCAG Accessibility</p>
                             </li>
                         </ul>
                     </div>
