changed the hero text effect

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         gtag('config', 'G-YXDZGX9BNJ');
     </script>
     <link rel="stylesheet" href="./styles/sass/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- <script src="./js/modernizr.js"></script> -->
+    <script defer src="./js/validate.js"></script>
 </head>
 <body>
     <div class="center">
@@ -90,8 +93,21 @@
         <!-- Hero Section -->
         <main>
             <img class="heroImg" src="./assets/bg.jpg" alt="">
-            <div class="txtContainer">
+            <!-- <div class="txtContainer">
                 <h1>Hello, I'm Adrian.</h1>
+                <p class="subtitle">Welcome to my website!</p>
+            </div> -->
+            <!-- ********************************************** -->
+            <!-- Text Rotate effect -->
+            <div class="txtContainer">
+                <h1 class="cd-headline letters rotate-2">
+                    <span>I am a </span>
+                    <span class="cd-words-wrapper">
+                        <b class="is-visible">developer</b>
+                        <b>creator</b>
+                        <b>dreamer</b>
+                    </span>
+                </h1>
                 <p class="subtitle">Welcome to my website!</p>
             </div>
         </main>
@@ -103,7 +119,7 @@
                 
                 <div class="rightContainer">
                     <h3>Who am I</h3>
-                    <p class="tab">Hi! I am a professional Front End Developer based in Toronto. I am passionate about learning new technologies, bringing new ideas to life, and working with dedicated teams to build efficient and robust applications. I can build clean and responsive applications tailored to every client's needs and expectations using excellent skills in HTML, CSS, SASS, JavaScript, and React.
+                    <p class="tab">Hi! My name is Adrian and I am a professional Front End Developer based in Toronto. I am passionate about learning new technologies, bringing new ideas to life, and working with dedicated teams to build efficient and robust applications. I can build clean and responsive applications tailored to every client's needs and expectations using excellent skills in HTML, CSS, SASS, JavaScript, and React.
                     </p>
                     <p class="tab">When I am not coding, you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.
                     </p>
@@ -270,7 +286,7 @@
                 <ul>
                     <li><span>Address :</span> 411 Duplex Avenue,Toronto</li>
                     <!-- <li><span>Phone Nr. :</span> 444-555-7777</li> -->
-                    <li><span>Email Address :</span> sclaudiu82@yahoo.com</li>
+                    <li><span>Email Address :</span> adrian.c.stoian.gmail.com</li>
                 </ul>
             </div>
             <div class="contact_info">
@@ -323,6 +339,21 @@
     <!-- /Footer -->
     <script src="loader.js"></script>
     <script src="hamburger.js"></script>
+    <!-- ******************************************************************************* -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script> -->
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script> -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
 
