changed intro text

--- a/index.html
+++ b/index.html
@@ -119,10 +119,14 @@
                 
                 <div class="rightContainer">
                     <h3>Who am I</h3>
-                    <p class="tab">Hi! My name is Adrian and I am a professional Front End Developer based in Toronto. I am passionate about learning new technologies, bringing new ideas to life, and working with dedicated teams to build efficient and robust applications. I can build clean and responsive applications tailored to every client's needs and expectations using excellent skills in HTML, CSS, SASS, JavaScript, and React.
+                    <p class="tab">Hi! My name is Adrian, and I am a professional Front End Developer with a passion for designing, optimizing, and
+                    maintaining web applications. In addition to formal training, I am a self-learner and enjoy exploring trends and tinkering with the latest web
+                    technologies to discover new ways of doing things.
                     </p>
-                    <p class="tab">When I am not coding, you can find me outside practicing my photography talents or inside keeping up with my Sci-Fi books-to-read list.
+                    <p class="tab">When I'm not coding, you can find me practicing my photography skills, reading science-fiction, traveling, or enjoying
+                    the outdoors. Thanks for stopping by, and I look forward to connecting with you!
                     </p>
+
                     <h3>My Developer Tools:</h3>
                     <div class="skillList">
                         <ul class="skillIcons">
