--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <nav class="menu">
                 <div class="menu-branding">
-                    <img src="./assets/Adrian_Stoian.png" alt="Adrian Stoian Picture">
+                    <img src="./assets/Adrian_C_Stoian.png" alt="Adrian Stoian Picture">
                 </div>
                 <ul class="menu-nav">
                     <li class="nav-item current">
