changed about me text

--- a/index.html
+++ b/index.html
@@ -101,12 +101,10 @@
                 
                 <div class="rightContainer">
                     <h3>Who am I</h3>
-                    <p class="tab">Hi! My name is Adrian, and I am a professional Front End Developer with a passion for designing, optimizing, and
-                    maintaining web applications. In addition to formal training, I am a self-learner and enjoy exploring trends and tinkering with the latest web
-                    technologies to discover new ways of doing things.
+                    <p class="tab">Hi! I am Adrian, a professional Front End Developer with a background in banking and accounting. I am passionate about designing, building, and optimizing web applications using HTML5, CSS3, JavaScript, React with an aim to be a full stack developer in the future.
+In addition to graduating from Juno College's Web Development Immersive Bootcamp, I am a self-learner who enjoys exploring trends and tinkering with the latest web technologies to discover new ways of doing things.
                     </p>
-                    <p class="tab">When I'm not coding, you can find me practicing my photography skills, reading science-fiction, traveling, or enjoying
-                    the outdoors. Thanks for stopping by, and I look forward to connecting with you!
+                    <p class="tab">When I'm not coding, you can find me practicing my photography skills, reading science-fiction, traveling, or enjoying the outdoors. Thanks for stopping by, and I look forward to connecting with you!
                     </p>
 
                     <h3>My Developer Tools:</h3>
