--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Feel free to take a look around my portfolio to see my work and the skills I've 
                         </div>
                         <div class="content">
                             <h2>E-commerce Store</h2>
-                            <p>A web conversion from a PSD with multi-page functionality.</p>
+                            <p>An E-commerce store that features secure authentication with the help of Firebase Database and offers the user access to cart and check-out functionalities</p>
                             
                             <p>REACT | HTML | STYLED COMPONENTS</p>
                             <div class="buttons">
